# backtest-api

./: .env.example  .gitignore  .pre-commit-config.yaml  DECISIONS.txt  Dockerfile  Makefile  README.md  docker-compose.yml  openapi.json  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: main.py  schemas.py
app/api/: dependencies.py  routes.py
app/backtest/: engine.py  portfolio_selector.py
app/backtest/calendar/: base.py  factory.py  quarterly.py
app/backtest/filters/: base.py  factory.py  topn.py
app/backtest/weighting/: base.py  equal.py  factory.py
app/core/: config.py  exceptions.py  logging.py
app/db/: duckdb_engine.py
app/services/: __init__.py  base_data_service.py  gemini_chat_client.py  llm_client_base.py  llm_factory.py  local_data_service.py  nlu_service.py  openai_chat_client.py  openllm_chat_client.py  s3_data_service.py
app/utils/: validators.py
postman/: bitacore.postman_collection.json  bitacore.postman_environment.json
scripts/: generate_parquets.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_api.py  test_api_edge_cases.py  test_data_services_comprehensive.py  test_duckdb_engine.py  test_engine.py  test_factories.py  test_llm_clients.py  test_nlu_service.py  test_openllm_chat_client.py  test_schemas.py  test_validators.py
