[project]
name = "bitacore"
version = "0.1.0"
description = "BITA Backtest API - High-performance financial backtesting with NLP capabilities"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "duckdb>=0.10.0",
    "fsspec>=2023.10.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.3.0",
    "python-json-logger>=2.0.0",
    "openai>=1.12.0",
    "pandas-stubs==2.3.2.250926",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "pyinstrument>=4.6.0",
    "ipython>=8.20.0",
    "jupyterlab>=4.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "B904"]
per-file-ignores = {"__init__.py" = ["F401"]}

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
ignore_missing_imports = true
